Config apidocs mod-inventory FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -196,6 +196,7 @@ mod-inventory:
       - inventory
       - inventory-batch
       - inventory-config
+      - inventory-event-handlers
       - isbn
     ramlutil: ramls/raml-util
     rmb: false
