Initial apidocs config mod-quick-marc FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -246,6 +246,14 @@ mod-inventory-storage:
       - statistical-code-type
     ramlutil: ramls/raml-util
 
+mod-quick-marc:
+  - label: null
+    version1: true
+    directory: ramls
+    excludes:
+      - raml-storage
+    ramlutil: ramls/raml-storage/raml-util
+
 mod-invoice:
   - label: null
     version1: true
