--- a/_data/api.yml
+++ b/_data/api.yml
@@ -250,6 +250,8 @@ mod-quick-marc:
   - label: null
     version1: true
     directory: ramls
+    files:
+      - records-editor
     excludes:
       - raml-storage
     ramlutil: ramls/raml-storage/raml-util
