Config apidocs mod-kb-ebsco-java FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -294,6 +294,7 @@ mod-kb-ebsco-java:
       - access-types
       - custom-labels
       - eholdings
+      - kb-credentials
       - packages
       - providers
       - proxies
