--- a/_data/api.yml
+++ b/_data/api.yml
@@ -372,6 +372,7 @@ mod-finance:
     files:
       - awaiting-payment
       - budgets
+      - exchange-rate
       - fiscal-years
       - fund-types
       - funds
