--- a/_data/api.yml
+++ b/_data/api.yml
@@ -291,6 +291,7 @@ mod-kb-ebsco-java:
     version1: true
     directory: ramls
     files:
+      - assigned-users
       - access-types
       - custom-labels
       - eholdings
