--- a/_data/api.yml
+++ b/_data/api.yml
@@ -153,6 +153,7 @@ mod-circulation:
     version1: true
     directory: ramls
     files:
+      - change-due-date
       - circulation
       - circulation-rules
       - claim-item-returned
