Config apidocs mod-organizations FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -459,6 +459,15 @@ edge-orders:
     ramlutil: null
     rmb: false
 
+mod-organizations:
+  - label: null
+    version1: true
+    directory: ramls
+    files:
+    excludes:
+      - acq-models
+    ramlutil: ramls/raml-util
+
 mod-organizations-storage:
   - label: null
     version1: true
