--- a/_data/api.yml
+++ b/_data/api.yml
@@ -471,6 +471,7 @@ mod-organizations:
     version1: true
     directory: ramls
     files:
+      - organizations
     excludes:
       - acq-models
     ramlutil: ramls/raml-util
