Config apidocs mod-finc-config FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -355,6 +355,8 @@ mod-finc-config:
     directory: ramls
     files:
       - finc-tenant
+      - fincConfigFiles
+      - fincConfigFilters
       - fincSelectFiles
       - fincSelectFilters
       - fincConfigMetadataCollections
