Config apidocs mod-inventory-storage FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -247,6 +247,7 @@ mod-inventory-storage:
       - material-type
       - mode-of-issuance
       - nature-of-content-term
+      - oai-pmh-view
       - service-point
       - service-points-user
       - shelf-location
