Config apidocs mod-erm-usage FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -337,6 +337,7 @@ mod-erm-usage:
     files:
       - aggregatorsettings
       - counterreports
+      - files
       - usagedataproviders
     ramlutil: ramls/raml-util
 
