Config apidocs mod-circulation FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -163,6 +163,7 @@ mod-circulation:
     files:
       - change-due-date
       - circulation
+      - circulation-event-handlers
       - circulation-rules
       - claim-item-returned
       - declare-item-lost
