Config apidocs mod-patron-blocks FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -96,6 +96,7 @@ mod-patron-blocks:
     version1: true
     directory: ramls
     files:
+      - automated-patron-blocks
       - eventHandlers
       - patron-block-conditions
       - patron-block-limits
