--- a/_data/api.yml
+++ b/_data/api.yml
@@ -361,6 +361,8 @@ mod-finc-config:
     directory: ramls
     files:
       - finc-tenant
+      - fincConfigEZBCredentials
+      - fincSelectEZBCredentials
       - fincConfigFiles
       - fincConfigFilters
       - fincSelectFiles
