Config apidocs mod-users FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -69,6 +69,7 @@ mod-users:
     version1: true
     directory: ramls
     files:
+      - departments
       - groups
       - users
       - addressTypes
