Config apidocs mod-finance-storage FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -411,6 +411,7 @@ mod-finance-storage:
     directory: ramls
     files:
       - budget
+      - budget_expense_class
       - expense_class
       - finance-storage
       - fiscal-year
