--- a/_data/api.yml
+++ b/_data/api.yml
@@ -392,6 +392,7 @@ mod-finance:
     files:
       - budgets
       - exchange-rate
+      - expense-classes
       - fiscal-years
       - fund-types
       - funds
