Config apidocs mod-patron-blocks FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -101,6 +101,7 @@ mod-patron-blocks:
       - eventHandlers
       - patron-block-conditions
       - patron-block-limits
+      - user-summary
     ramlutil: ramls/raml-util
 
 edge-patron:
