Config apidocs mod-oai-pmh FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -325,6 +325,7 @@ mod-oai-pmh:
     directory: ramls
     files:
       - oai-pmh
+      - oai-pmh-set
     ramlutil: ramls/raml-util
 
 edge-oai-pmh:
