--- a/_data/api.yml
+++ b/_data/api.yml
@@ -344,6 +344,7 @@ mod-erm-usage:
     files:
       - aggregatorsettings
       - counterreports
+      - customreports
       - files
       - usagedataproviders
     ramlutil: ramls/raml-util
