Config apidocs mod-oai-pmh FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -324,8 +324,8 @@ mod-oai-pmh:
     version1: true
     directory: ramls
     files:
+      - folio-set
       - oai-pmh
-      - oai-pmh-set
     ramlutil: ramls/raml-util
 
 edge-oai-pmh:
