Rename mod-custom-fields FOLIO-2733
to folio-custom-fields

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -721,7 +721,7 @@ edge-lti-courses:
     ramlutil: null
     rmb: false
 
-mod-custom-fields:
+folio-custom-fields:
   - label: null
     version1: true
     directory: ramls
@@ -815,6 +815,14 @@ data-import-raml-storage:
     rmb: false
 
 # Deprecated
+mod-custom-fields:
+  - label: null
+    version1: true
+    directory: ramls
+    files:
+      - custom-fields
+    ramlutil: ramls/raml-util
+
 mod-vendors:
   - label: null
     version1: true
