Config apidocs mod-audit FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -735,6 +735,7 @@ mod-audit:
     directory: ramls
     files:
       - audit-data
+      - circulation-logs
     ramlutil: ramls/raml-util
 
 mod-configuration:
