Config apidocs mod-feesfines FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -524,6 +524,7 @@ mod-feesfines:
     directory: ramls
     files:
       - accounts
+      - accounts-bulk
       - comments
       - feefineactions
       - feefines
