Config apidocs mod-data-export FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -654,6 +654,7 @@ mod-data-export:
       - dataExport
       - dataExport-file-definition
       - dataExport-job-profile
+      - dataExport-logs
       - dataExport-mapping-profiles
       - dataExport-transformation-fields
     ramlutil: ramls/raml-util
