Config apidocs mod-feesfines FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -530,6 +530,7 @@ mod-feesfines:
       - feefines
       - lost-item-fee-policy
       - manualblocks
+      - manual-block-templates
       - overdue-fine-policy
       - owners
       - payments
