Config apidocs mod-finance-storage FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -443,6 +443,8 @@ mod-finance-storage:
       - group-budgets
       - group_fund_fy
       - ledger
+      - ledger_rollover
+      - ledger_rollover_progress
       - transaction
       - transaction-summary
     ramlutil: ramls/raml-util
