Config apidocs mod-oai-pmh FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -342,6 +342,7 @@ mod-oai-pmh:
     version1: true
     directory: ramls
     files:
+      - cleanup-job
       - folio-set
       - folio-set-filtering-conditions
       - oai-pmh
