Config apidocs mod-finance FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -422,6 +422,7 @@ mod-finance:
       - group-fiscal-year-summaries
       - group-fund-fiscal-year
       - groups
+      - ledger_rollover
       - ledgers
       - release-encumbrance
       - transaction
