Config apidocs mod-inventory-storage FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -264,6 +264,7 @@ mod-inventory-storage:
       - mode-of-issuance
       - nature-of-content-term
       - oai-pmh-view
+      - record-bulk
       - service-point
       - service-points-user
       - shelf-location
