Config apidocs mod-feesfines FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -548,6 +548,7 @@ mod-feesfines:
       - accounts-bulk
       - comments
       - feefineactions
+      - feefine-reports
       - feefines
       - lost-item-fee-policy
       - manualblocks
