Config apidocs mod-finance-storage FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -447,6 +447,7 @@ mod-finance-storage:
       - group_fund_fy
       - ledger
       - ledger_rollover
+      - ledger-rollover-errors
       - ledger_rollover_progress
       - transaction
       - transaction-summary
