Config apidocs mod-source-record-storage FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -684,6 +684,7 @@ mod-source-record-storage:
       - source-record-storage-records
       - source-record-storage-snapshots
       - source-record-storage-source-records
+      - source-record-storage-stream
       - source-record-storage-test-records
     excludes:
       - raml-storage
