Use secret with github3-py FOLIO-2976
To read some details of each repo

--- a/.github/workflows/get-release-versions.yml
+++ b/.github/workflows/get-release-versions.yml
@@ -29,4 +29,6 @@ jobs:
         pip install -r .github/workflows/get-release-versions/requirements.txt
 
     - name: Run script
+      env:
+        ALL_REPOS_READ_ONLY: ${{ secrets.ALL_REPOS_READ_ONLY }}
       run: python .github/workflows/get-release-versions/get_release_versions.py -b q3-2020 -l debug
