Use id for step

--- a/.github/workflows/get-release-versions.yml
+++ b/.github/workflows/get-release-versions.yml
@@ -34,15 +34,16 @@ jobs:
       run: python .github/workflows/get-release-versions/get_release_versions.py -b q3-2020 -l debug
 
     - name: Commit changes, if any
+      id: auto-commit-action
       uses: stefanzweifel/git-auto-commit-action@v4
       with:
         commit_message: Apply automatic changes
         branch: ongoing-release-versions
         file_pattern: _data/*.json
     - name: Run if changes have been detected
-      if: steps.auto-commit-action.outputs.changes_detected == 'true'
+      if: ${{ steps.auto-commit-action.outputs.changes_detected == 'true' }}
       run: echo "Changes were committed."
     - name: Run if no changes have been detected
-      if: steps.auto-commit-action.outputs.changes_detected == 'false'
+      if: ${{ steps.auto-commit-action.outputs.changes_detected == 'false' }}
       run: echo "There were no changes."
 
