--- a/.github/workflows/get-release-versions.yml
+++ b/.github/workflows/get-release-versions.yml
@@ -5,8 +5,10 @@ name: get-release-versions
 # If changes then push to branch ongoing-release-versions
 
 on:
-  schedule:
-    - cron: '35 01 * * *'
+#  schedule:
+#    - cron: '35 01 * * *'
+  push:
+    branches: [ folio-2976-wf-get-releases-4 ]
 
 jobs:
   job_1:
