--- a/.github/workflows/gather-schema-changes.yml
+++ b/.github/workflows/gather-schema-changes.yml
@@ -28,6 +28,9 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r .github/workflows/gather-schema-changes/requirements.txt
 
+    - name: Install yarn dependencies
+      run: yarn install
+
     - name: Install other dependencies
       run: brew install jd
 
