Config apidocs mod-inventory-storage FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -226,6 +226,7 @@ mod-inventory-storage:
       - holdings-note-type
       - hrid-settings-storage
       - instance-preceding-succeeding-titles
+      - instance-reindex
       - instance-storage
       - instance-storage-batch
       - instance-format
