Config apidocs mod-quick-marc FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -278,9 +278,7 @@ mod-quick-marc:
     directory: ramls
     files:
       - records-editor
-    excludes:
-      - raml-storage
-    ramlutil: ramls/raml-storage/raml-util
+    ramlutil: null
 
 mod-invoice:
   - label: null
