--- a/.github/workflows/gather-schema-changes.yml
+++ b/.github/workflows/gather-schema-changes.yml
@@ -39,7 +39,7 @@ jobs:
       run: brew install jd
 
     - name: Run script
-      run: python $WF_HOME/gather_schema_changes.py -b q3-2020 -l info
+      run: python $WF_HOME/gather_schema_changes.py -b R1-2021 -l info
 
     - name: Add media type
       run: echo -e 'text/plain\tdiff' | sudo tee -a /etc/mime.types
