Upgrade to Jekyll v4 FOLIO-3098
Now v4.2.0 (was v3.9.1)

--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ markdown: kramdown
 plugins:
   - jekyll-remote-theme
   - jekyll-gist
+  - jekyll-feed
 
 exclude: [bin, Gemfile, Gemfile.lock, CONTRIBUTING.md, README.md, tmp, vendor, work]
 
