--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ plugins:
   - jekyll-gist
   - jekyll-feed
 
-exclude: [bin, Gemfile, Gemfile.lock, CONTRIBUTING.md, README.md, tmp, vendor, work]
+exclude: [bin, CONTRIBUTING.md, README.md, tmp, work]
 
 collections:
   faqs:
