--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,8 @@ twitter_username: folio_lsp
 # Build settings
 remote_theme: Balancingrock/classic-jekyll-theme@2.5.0
 markdown: kramdown
+sass:
+  sourcemap: never
 plugins:
   - jekyll-remote-theme
   - jekyll-gist
