Using api-doc at mod-inn-reach FOLIO-2898

--- a/_data/apigroup.yml
+++ b/_data/apigroup.yml
@@ -112,6 +112,7 @@ other:
     - acq-models
     - data-import-raml-storage
     - mod-eusage-reports
+    - mod-inn-reach
     - mod-rtac
     - edge-rtac
 deprecated:
