Config apidocs mod-circulation-storage FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -219,6 +219,7 @@ mod-inventory-storage:
     version1: true
     directory: ramls
     files:
+      - bound-with-part
       - holdings-sources
       - holdings-storage
       - holdings-sync
