Link api docs mod-ldp FOLIO-3227

--- a/_data/apigroup.yml
+++ b/_data/apigroup.yml
@@ -113,6 +113,7 @@ other:
     - data-import-raml-storage
     - mod-eusage-reports
     - mod-inn-reach
+    - mod-ldp
     - mod-rtac
     - edge-rtac
 deprecated:
