Config apidocs mod-orders FOLIO-903

--- a/_data/api.yml
+++ b/_data/api.yml
@@ -457,6 +457,7 @@ mod-orders:
       - acquisitions-units
       - check-in
       - configuration
+      - holding-summary
       - order
       - order-lines
       - order-templates
